apps/blue-green-test/yaml/service-preview.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
spec:
  selector:
    app: rollout-bluegreen
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  #type: LoadBalancer
  type: ClusterIP
