apps/blue-green-test/yaml/ingress-preview.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-service-preview
  namespace: default

  annotations:
    #kubernetes.io/ingress.class: alb
    kubernetes.io/ingress.class: nginx

    #alb.ingress.kubernetes.io/group.name: common-ingress-group
    #alb.ingress.kubernetes.io/load-balancer-name: apps-ingress

    #alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/scheme: internet-facing

spec:
  ingressClassName: nginx
  rules:
  - host: bluegreenpreview.pauljsolomon.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollout-bluegreen-preview
            port: 
              number: 80
